--- a/Phonebook-web/src/main/webapp/pages/person/marriageStatusList.xhtml
+++ b/Phonebook-web/src/main/webapp/pages/person/marriageStatusList.xhtml
@@ -58,7 +58,7 @@
 	resizable="false" showEffect="explode" hideEffect="explode" width="750">
 	<p:accordionPanel multiple="true" id="display">
 	<p:tab title="#{msgs.marriageStatusDetails}">
-		<p:panelGrid style="direction: rtl;width: 100%">
+		<p:panelGrid>
 			<p:row>
 				<p:column>
 		            <h:outputText value="#{msgs.marriageStatus}: " />
