--- a/Phonebook-web/src/main/webapp/pages/person/personCreate.xhtml
+++ b/Phonebook-web/src/main/webapp/pages/person/personCreate.xhtml
@@ -4,92 +4,95 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core" xml:lang="en" lang="en"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 <ui:composition template="/template/base.xhtml"><ui:define name="content">
 <h:form id="editPerson" acceptcharset="UTF-8" enctype="application/form-data"
 	prependId="false">
-	
+
 <!-- breadcrumb -->
-<h:link value="#{msgs.home}" outcome="/index.xhtml" /> &gt;
-<h:link value="#{msgs.personList}" outcome="/pages/person/personList.xhtml" /> &gt; #{msgs.createPerson}
-	
-	<h1><h:outputText value="#{msgs.createPerson}" /></h1>
+<c:forEach items="#{personMB.breadCrumb}" var="link" varStatus="varStatus">
+	<h:link value="#{link.key}" outcome="#{link.value}" />
+	<h:outputText value=" > " rendered="#{!varStatus.last}" />
+</c:forEach>
 
-	<p:panel id="pnl" header="#{msgs.personalDetails}"
-		toggleable="true" toggleSpeed="500" closeSpeed="2000"
-		widgetVar="panel1">
-		<p:panelGrid>
-			<p:row>
-				<p:column width="300">
-					<h:outputLabel>
-						<h:outputText value="#{msgs.firstName}"  />
-					</h:outputLabel>
-				</p:column>
-				<p:column colspan="2">
-					<h:inputText id="firstName" value="#{personMB.person.firstName}"
-						required="true" requiredMessage="#{msgs.required}" />
-				</p:column>
-				<p:column styleClass="error-message">
-					<h:message for="firstName" />
-				</p:column>
+<h1><h:outputText value="#{msgs.createPerson}" /></h1>
 
-				<p:column width="300">
-					<h:outputLabel>
-						<h:outputText value="#{msgs.lastName}" />
-					</h:outputLabel>
-				</p:column>
-				<p:column colspan="2">
-					<h:inputText id="lastName" value="#{personMB.person.lastName}"
-						required="true" requiredMessage="#{msgs.required}" />
-				</p:column>
-				<p:column styleClass="error-message">
-					<h:message for="lastName" />
-				</p:column>
-			</p:row>
+<p:panel id="pnl" header="#{msgs.personalDetails}"
+	toggleable="true" toggleSpeed="500" closeSpeed="2000"
+	widgetVar="panel1">
+	<p:panelGrid>
+		<p:row>
+			<p:column width="300">
+				<h:outputLabel>
+					<h:outputText value="#{msgs.firstName}"  />
+				</h:outputLabel>
+			</p:column>
+			<p:column colspan="2">
+				<h:inputText id="firstName" value="#{personMB.person.firstName}"
+					required="true" requiredMessage="#{msgs.required}" />
+			</p:column>
+			<p:column styleClass="error-message">
+				<h:message for="firstName" />
+			</p:column>
 
-			<p:row>
-				<p:column width="300">
-					<h:outputLabel>
-						<h:outputText value="#{msgs.nationalCode}" />
-					</h:outputLabel>
-				</p:column>
-				<p:column colspan="2">
-					<h:inputText id="nationalCode" value="#{personMB.person.nationalCode}"
-						required="true" requiredMessage="#{msgs.required}">
-						<f:validator validatorId="nationalCodeDuplicationValidator" />
-					</h:inputText>
-				</p:column>
-				<p:column styleClass="error-message">
-					<h:message for="nationalCode" />
-				</p:column>
+			<p:column width="300">
+				<h:outputLabel>
+					<h:outputText value="#{msgs.lastName}" />
+				</h:outputLabel>
+			</p:column>
+			<p:column colspan="2">
+				<h:inputText id="lastName" value="#{personMB.person.lastName}"
+					required="true" requiredMessage="#{msgs.required}" />
+			</p:column>
+			<p:column styleClass="error-message">
+				<h:message for="lastName" />
+			</p:column>
+		</p:row>
 
-				<p:column width="300">
-					<h:outputLabel>
-						<h:outputText value="#{msgs.marriageStatus}"  />
-					</h:outputLabel>
-				</p:column>
-				<p:column colspan="2">
-					<h:selectOneMenu id="marriageStatusList"
-						value="#{personMB.person.marriageStatus}"
-						required="true" requiredMessage="#{msgs.required}"
-						converter="marriageStatusConverter">
-						<f:selectItem itemLabel="#{msgs.selectOne}" itemValue="" />
-						<f:selectItems value="#{personMB.marriageStatusList}"
-							var="marriageStatus" itemValue="#{marriageStatus}"
-							itemLabel="#{marriageStatus.marriageStatus}" />
-					</h:selectOneMenu>
-				</p:column>
-				<p:column styleClass="error-message">
-					<h:message for="marriageStatusList" />
-				</p:column>
-			</p:row>
-		</p:panelGrid>
-	</p:panel>
+		<p:row>
+			<p:column width="300">
+				<h:outputLabel>
+					<h:outputText value="#{msgs.nationalCode}" />
+				</h:outputLabel>
+			</p:column>
+			<p:column colspan="2">
+				<h:inputText id="nationalCode" value="#{personMB.person.nationalCode}"
+					required="true" requiredMessage="#{msgs.required}">
+					<f:validator validatorId="nationalCodeDuplicationValidator" />
+				</h:inputText>
+			</p:column>
+			<p:column styleClass="error-message">
+				<h:message for="nationalCode" />
+			</p:column>
 
-	<h:panelGroup styleClass="div plus-and-save">
-		<h:commandButton value="#{msgs.save}" action="#{personMB.personCreate}" />
-	</h:panelGroup>
+			<p:column width="300">
+				<h:outputLabel>
+					<h:outputText value="#{msgs.marriageStatus}"  />
+				</h:outputLabel>
+			</p:column>
+			<p:column colspan="2">
+				<h:selectOneMenu id="marriageStatusList"
+					value="#{personMB.person.marriageStatus}"
+					required="true" requiredMessage="#{msgs.required}"
+					converter="marriageStatusConverter">
+					<f:selectItem itemLabel="#{msgs.selectOne}" itemValue="" />
+					<f:selectItems value="#{personMB.marriageStatusList}"
+						var="marriageStatus" itemValue="#{marriageStatus}"
+						itemLabel="#{marriageStatus.marriageStatus}" />
+				</h:selectOneMenu>
+			</p:column>
+			<p:column styleClass="error-message">
+				<h:message for="marriageStatusList" />
+			</p:column>
+		</p:row>
+	</p:panelGrid>
+</p:panel>
+
+<h:panelGroup styleClass="div plus-and-save">
+	<h:commandButton value="#{msgs.save}" action="#{personMB.personCreate}" />
+</h:panelGroup>
 </h:form>
 </ui:define></ui:composition>
 </html>
