--- a/Phonebook-web/src/main/webapp/pages/person/personUpdate.xhtml
+++ b/Phonebook-web/src/main/webapp/pages/person/personUpdate.xhtml
@@ -4,10 +4,17 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core" xml:lang="en" lang="en"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 <ui:composition template="/template/base.xhtml"><ui:define name="content">
 <h:form id="editPerson" acceptcharset="UTF-8" enctype="application/form-data" prependId="false">
+	
+	<!-- breadcrumb -->
+	<c:forEach items="#{personMB.breadCrumb}" var="link" varStatus="varStatus">
+		<h:link value="#{link.key}" outcome="#{link.value}" />
+		<h:outputText value=" > " rendered="#{!varStatus.last}" />
+	</c:forEach>
 	
 	<h1><h:outputText value="#{msgs.updatePerson}" /></h1>
 
