add edit validation for NationalCode

--- a/Phonebook-web/src/main/webapp/pages/person/personList.xhtml
+++ b/Phonebook-web/src/main/webapp/pages/person/personList.xhtml
@@ -11,6 +11,8 @@
 <ui:define name="content">
 <h:form id="table_form">
 
+<p:growl id="growl" sticky="true" />
+
 <!-- breadcrumb -->
 
 <c:forEach items="#{personMB.breadCrumb}" var="link" varStatus="varStatus">
